added styling. Following along with lecture learning repositories

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,143 @@
-body {
-    background-color: steelblue;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Chalkboard, sans-serif;
 }
+
+body {
+    background-color: #eeeeee;
+}
+
+.navbar {
+    font-size: 18px;
+    background-color: #222831;
+    padding-bottom: 10px;
+}
+
+.hb-button {
+    position: absolute;
+    top: 25px;
+    right: 30px;
+    cursor: pointer;
+    color: rgb(54, 54, 54);
+    font-size: 25px;
+    padding: 5px 8px;
+    border-style: double;
+}
+
+.logo {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 45px;
+    margin-top: 5px;
+    margin-left: 15px;
+    font-family: Chalkduster;
+    font-weight: bold;
+    color: white;
+    letter-spacing: 2px;
+}
+span.nav-header {
+    color: #ff7777;
+}
+
+.nav-container {
+    text-align: center;
+    list-style-type: none;
+    display: none;
+}
+
+.nav-container li {
+    text-align: center;
+    margin: 15px auto;
+}
+
+a.nav-text {
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    font-family: Chalkboard, sans-serif;
+    letter-spacing: 2px;
+    padding: 5px 20px;
+}
+
+.text-links {
+    text-decoration: none;
+    font-size: 20px;
+    color: #ff7777;
+    font-family: Chalkboard, sans-serif;
+    letter-spacing: 2px;
+    padding: 5px 20px;
+}
+
+.nav-container li a:hover {
+    color: #ff7777;
+}
+
+.active {
+    display: block;
+}
+
+.text-container {
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.text-container h1 {
+    font-family: Chalkboard, sans-serif;
+    letter-spacing: 5px;
+    font-size: 50px;
+}
+
+.footer {
+    margin-top: auto;
+    text-align: center;
+}
+
+.main-container {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
+    font-family: Chalkboard, sans-serif;
+}
+
+@media screen and (min-width: 768px) {
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 0;
+        height: 70px;
+        align-items: center;
+    }
+
+    .logo {
+        margin-top: 0;
+    }
+
+    .hb-button {
+        display: none;
+    }
+
+    .logo:hover,
+    .nav-links:hover {
+        color: rgba(255, 255, 255, 1);
+    }
+
+    .nav-container {
+        display: flex;
+        margin-right: 30px;
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+
+    .nav-container li {
+        margin: 0;
+    }
+}
+
+
+
+
+
