--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome to my blog!</title>
+<head th:replace="partials :: head ('Welcome to my blog')">
 </head>
 <body>
-    <h1>This is the home page</h1>
-
+    <nav th:replace="partials :: navbar"></nav>
+    <div class="text-container">
+        <h1>Home</h1>
+    </div>
+    <footer th:replace="partials :: footer"></footer>
+    <script th:replace="partials :: js"></script>
 </body>
 </html>
