--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <title th:text="${title}"></title>
     <link rel="stylesheet" th:href="@{/style.css}">
+    <script src="https://kit.fontawesome.com/ace4380aab.js" crossorigin="anonymous"></script>
 </head>
-<body>
-
+<body th:fragment="flex-body" th:class="main-container">
+    <header th:fragment="header (header)">
+        <h1 th:text="${header}">Welcome to Life's a blog</h1>
+    </header>
+    <nav th:fragment="navbar" th:class="navbar">
+        <button class="hb-button" id="hb-btn">
+            <i class="fas fa-bars"></i>
+        </button>
+        <a class="logo" href="/"><span class="nav-header">Life's a</span> Blog</a>
+        <ul class="nav-container" id="nav">
+            <li><a href="/" class="nav-links nav-text">Home</a></li>
+            <li><a href="/posts/index" class="nav-links nav-text">Posts</a></li>
+            <li><a href="/roll-dice" class="nav-links nav-text">Dice game</a></li>
+        </ul>
+    </nav>
+    <footer th:fragment="footer" th:class="footer">
+        <p>&copy; 2023 Life's a Blog</p>
+    </footer>
+    <script th:fragment="js" th:src="@{/script.js}"></script>
 </body>
 </html>
