--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Post</title>
+<head th:replace="partials :: head (${post.title})">
 </head>
-<body th:include="partials :: flex-body">
+<body class="main-container">
     <nav th:replace="partials :: navbar"></nav>
-    <h1><span th:text="${post.title}"></span></h1>
-    <p><span th:text="${post.body}"></span></p>
+    <div class="text-container">
+        <h1><span th:text="${post.title}"></span></h1>
+        <p><span th:text="${post.body}"></span></p>
+    </div>
     <footer th:replace="partials :: footer"></footer>
     <script th:replace="partials :: js"></script>
 </body>
