--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="partials :: head ('Welcome to my blog')">
 </head>
-<body>
+<body class="main-container">
     <nav th:replace="partials :: navbar"></nav>
     <div class="text-container">
         <h1>Home</h1>
     </div>
     <footer th:replace="partials :: footer"></footer>
-    <script th:replace="partials :: js"></script>
+    <div th:replace="partials :: js"></div>
 </body>
 </html>
