--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -18,6 +18,7 @@
         <ul class="nav-container" id="nav">
             <li><a href="/" class="nav-links nav-text">Home</a></li>
             <li><a href="/posts" class="nav-links nav-text">Posts</a></li>
+            <li><a href="/posts/create" class="nav-links nav-text">Create</a></li>
             <li><a href="/roll-dice" class="nav-links nav-text">Dice game</a></li>
         </ul>
     </nav>
