--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials :: head ('All posts')">
+<head th:replace="~{partials :: head ('All posts')}">
 </head>
 <body class="main-container">
-    <nav th:replace="partials :: navbar"></nav>
+    <nav th:replace="~{partials :: navbar}"></nav>
     <div class="text-container">
         <h1>Posts</h1>
         <ul>
           <li th:each="post : ${posts}">
-              <a th:href="@{/posts/{id}(id=${post.id})}" class="text-links"><h2 th:text="${post.title}">post</h2></a>
-            <p th:text="${post.body}">post</p>
+              <div class="post">
+                  <a th:href="@{/posts/{id}(id=${post.id})}" class="text-links"><h2 th:text="${post.title}">post</h2></a>
+                  <p th:text="${post.body}">post</p>
+              </div>
           </li>
         </ul>
     </div>
-    <footer th:replace="partials :: footer"></footer>
-    <script th:replace="partials :: js"></script>
+    <footer th:replace="~{partials :: footer}"></footer>
+    <script th:replace="~{partials :: js}"></script>
 </body>
 </html>
