--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials :: head ('Dice game')">
+<head th:replace="~{partials :: head ('Dice game')}">
 </head>
 <body class="main-container">
     <div>
-        <nav th:include="partials :: navbar" class="navbar"></nav>
+        <nav th:include="~{partials :: navbar}" class="navbar"></nav>
     </div>
     <div class="text-container">
         <h1>Roll Dice Game</h1>
         <p th:if="${roll == null}">Guess a number:</p>
         <p th:if="${roll}">You guessed: <span th:text="${guess}"></span></p>
+        <br>
         <p th:if="${message}"><span th:text="${message}"></span></p>
         <div th:if="${roll == null}">
             <a class="text-links" th:href="@{/roll-dice/1}"><i class="fa-solid fa-dice-one fa-xl"></i></a>
@@ -23,7 +24,7 @@
             <p><a class="text-links" th:href="@{/roll-dice}">Roll again</a></p>
         </div>
     </div>
-    <footer th:replace="partials :: footer"></footer>
-    <script th:replace="partials :: js"></script>
+    <footer th:replace="~{partials :: footer}"></footer>
+    <script th:replace="~{partials :: js}"></script>
 </body>
 </html>
