--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -6,9 +6,10 @@
 <nav th:replace="~{partials :: navbar}"></nav>
 <div class="text-container">
     <h1>Create a post</h1>
-    <form class="create-form" action="/posts/create" method="post">
+    <form class="create-form" action="/posts/create" method="post" th:object="${post}">
         <label for="title">Title</label>
-        <input type="text" name="title" id="title">
+        <input th:field="*{title}" type="text" name="title" id="title">
+        <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
         <br>
         <label for="body">Contents</label>
         <textarea name="body" id="body"></textarea>
