--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -7,6 +7,7 @@
     <div class="text-container">
         <h1><span th:text="${post.title}"></span></h1>
         <p><span th:text="${post.body}"></span></p>
+        <p>Created By: <span th:text="${post.user.email}"></span></p>
         <a href="/posts" class="text-links back-btn">Back</a>
     </div>
     <footer th:replace="~{partials :: footer}"></footer>
