--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="partials :: head ('Welcome to my blog')">
 </head>
-<body class="main-container">
+<body>
     <nav th:replace="partials :: navbar"></nav>
-    <div class="text-container">
-        <h1>Home</h1>
+    <div class="main-container">
+        <div class="text-container">
+            <h1>Home</h1>
+        </div>
+        <footer th:replace="partials :: footer"></footer>
     </div>
-    <footer th:replace="partials :: footer"></footer>
     <div th:replace="partials :: js"></div>
 </body>
 </html>
