--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -2,21 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{partials :: head ('All posts')}">
 </head>
-<body class="main-container">
+<body>
     <nav th:replace="~{partials :: navbar}"></nav>
-    <div class="text-container">
-        <h1>Posts</h1>
-        <ul>
-          <li th:each="post : ${posts}">
-              <div class="post">
-                  <a th:href="@{/posts/{id}(id=${post.id})}" class="text-links"><h2 th:text="${post.title}">post</h2></a>
-                  <p th:text="${post.body}">post</p>
-                  <p>Created By: <span th:text="${post.user.username}"></span></p>
-              </div>
-          </li>
-        </ul>
+    <div class="main-container">
+        <div class="text-container">
+            <h1>Posts</h1>
+            <ul>
+              <li th:each="post : ${posts}">
+                  <div class="post">
+                      <a th:href="@{/posts/{id}(id=${post.id})}" class="text-links"><h2 th:text="${post.title}">post</h2></a>
+                      <p th:text="${post.body}">post</p>
+                      <p>Created By: <span th:text="${post.user.username}"></span></p>
+                  </div>
+              </li>
+            </ul>
+        </div>
+        <footer th:replace="~{partials :: footer}"></footer>
     </div>
-    <footer th:replace="~{partials :: footer}"></footer>
     <script th:replace="~{partials :: js}"></script>
 </body>
 </html>
