adding spring security

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head (title)">
     <meta charset="UTF-8">
     <title th:text="${title}"></title>
-    <link rel="stylesheet" th:href="@{/style.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <script src="https://kit.fontawesome.com/ace4380aab.js" crossorigin="anonymous"></script>
 </head>
-<body th:class="main-container">
+<body>
     <header th:fragment="header (header)">
         <h1 th:text="${header}">Welcome to Life's a blog</h1>
     </header>
@@ -19,12 +19,25 @@
             <li><a href="/" class="nav-links nav-text">Home</a></li>
             <li><a href="/posts" class="nav-links nav-text">Posts</a></li>
             <li><a href="/posts/create" class="nav-links nav-text">Create</a></li>
-            <li><a href="/roll-dice" class="nav-links nav-text">Dice game</a></li>
+            <li>
+                <a href="/roll-dice" class="nav-links nav-text">Dice game</a>
+            </li>
+            <li sec:authorize="!isAuthenticated()">
+                <a class="nav-links nav-text" href="/sign-up">Register</a>
+            </li>
+            <li sec:authorize="!isAuthenticated()">
+                <a class="nav-links nav-text" href="/login">Login</a>
+            </li>
+            <li>
+                <form sec:authorize="isAuthenticated()" th:action="@{/logout}" th:method="post">
+                    <button class="btn btn-link" style="margin-top: 8px">Logout</button>
+                </form>
+            </li>
         </ul>
     </nav>
     <footer th:fragment="footer" th:class="footer">
         <p>&copy; 2023 Life's a Blog</p>
     </footer>
-    <script th:fragment="js" th:src="@{/script.js}"></script>
+    <script th:fragment="js" th:src="@{/js/script.js}"></script>
 </body>
 </html>
